--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.4.18"
+    "node-telegram-bot-api": "^0.51.0"
   }
 }
