--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/server.js"
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda build src"
   },
   "author": "Patric Kenneth",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "node-telegram-bot-api": "^0.51.0"
+    "netlify-lambda": "^2.0.3",
+    "node-telegram-bot-api": "^0.51.0",
+    "serverless-http": "^2.7.0"
   }
 }
