--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Patric Kenneth",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "netlify-lambda": "^2.0.3",
     "node-telegram-bot-api": "^0.51.0",
