--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "netlify-lambda": "^2.0.3",
     "node-telegram-bot-api": "^0.51.0",
-    "serverless-http": "^2.7.0"
+    "serverless-http": "^2.7.0",
+    "body-parser": "^1.19.0"
   }
 }
