--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "express": "^4.17.1",
     "netlify-lambda": "^2.0.3",
     "node-telegram-bot-api": "^0.51.0",
-    "serverless-http": "^2.7.0",
-    "telegraf": "^4.3.0"
+    "serverless-http": "^2.7.0"
   }
 }
